prevent zooming on iOS, no more button outlines

--- a/less/modules/base.less
+++ b/less/modules/base.less
@@ -45,6 +45,10 @@ menu {
 	.justifyContent(space-around);
 }
 
+button {
+	outline: none;
+}
+
 .lightbox-content {
 	background: white;
 	padding: 2rem;
